syntax = "proto3";

package manabie.yasuo;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_registration) = true;
option go_package = "github.com/manabie-com/backend/pkg/genproto/yasuo;pb";

enum UserNotificationStatus {
  USER_NOTIFICATION_STATUS_NONE = 0;
  USER_NOTIFICATION_STATUS_NEW = 1;
  USER_NOTIFICATION_STATUS_SEEN = 2;
  USER_NOTIFICATION_STATUS_READ = 3;
  USER_NOTIFICATION_STATUS_FAILED = 4;
}

enum NotificationType {
  NOTIFICATION_TYPE_NONE = 0;
  NOTIFICATION_TYPE_TEXT = 1;
  NOTIFICATION_TYPE_PROMO_CODE = 2;
}

enum UploadType {
  UPLOAD_TYPE_AVATAR = 0;
  UPLOAD_TYPE_CHAT = 1;
}

enum PaymentStatus {
  PAYMENT_STATUS_ON_TRIAL = 0;
  PAYMENT_STATUS_EXPIRED_TRIAL = 1;
  PAYMENT_STATUS_PAID = 2;
  PAYMENT_STATUS_LATE_PAYMENT = 3;
}

enum NotificationTargetStatus {
  NOTIFICATION_TARGET_STATUS_NONE = 0;
  NOTIFICATION_TARGET_STATUS_ACTIVE = 1;
  NOTIFICATION_TARGET_STATUS_DISABLE = 2;
}

enum AskDuration {
  THIS_DAY = 0;
  THIS_WEEK = 1;
  THIS_MONTH = 2;
  THIS_YEAR = 3;
}

enum QuestionStatus {
  QUESTION_STATUS_WAITING_FOR_ASSIGN = 0;
  QUESTION_STATUS_ASSIGNED = 1;
  QUESTION_STATUS_MARKED_AS_RESOLVED = 2;
  QUESTION_STATUS_MARKED_AS_INVALID = 3;
  QUESTION_STATUS_INVALID = 4;
  QUESTION_STATUS_SOLVED = 5;
  QUESTION_STATUS_EXPIRED_SOLVED = 6;
  QUESTION_STATUS_RATED = 7;
  QUESTION_STATUS_ARCHIVED = 8;
}

enum TutorStatus {
  TUTOR_STATUS_NONE = 0;
  TUTOR_STATUS_ONLINE = 1;
  TUTOR_STATUS_OFFLINE = 2;
}

enum TopicStatus {
  TOPIC_STATUS_NONE = 0;
  TOPIC_STATUS_DRAFT = 1;
  TOPIC_STATUS_PUBLISHED = 2;
}

enum OrderStatus {
  ORDER_STATUS_NONE = 0;
  ORDER_STATUS_WAITING_FOR_PAYMENT = 1;
  ORDER_STATUS_SUCCESSFULLY = 2;
  ORDER_STATUS_FAILED = 3;
  ORDER_STATUS_CANCELED = 4;
  ORDER_STATUS_ENDED = 5 [ deprecated = true ];
  ORDER_STATUS_PROCESSING_PAYMENT = 6;
  ORDER_STATUS_DELETED = 7;
  ORDER_STATUS_DISABLED = 8;
}

enum OrderTransitionAction {
  ORDER_TRANSITION_NONE = 0;
  ORDER_TRANSITION_PROCESS_PAYMENT = 1;
  ORDER_TRANSITION_COMPLETE = 2;
  ORDER_TRANSITION_FAIL = 3;
  ORDER_TRANSITION_CANCEL = 4;
  ORDER_TRANSITION_CLOSE = 5;
}

enum QuestionTransition {
  QUESTION_TRANSITION_ASSIGN = 0;
  QUESTION_TRANSITION_MARKED_AS_RESOLVED = 1;
  QUESTION_TRANSITION_MARKED_AS_INVALID = 2;
  QUESTION_TRANSITION_AGREE_INVALID = 3;
  QUESTION_TRANSITION_DISAGREE_INVALID = 4;
  QUESTION_TRANSITION_AGREE_RESOLVED = 5;
  QUESTION_TRANSITION_DISAGREE_RESOLVED = 6;
  QUESTION_TRANSITION_TIME_OUT_SOLVED = 7;
  QUESTION_TRANSITION_RATE = 8;
  QUESTION_TRANSITION_ARCHIVED = 9;
}

enum CoachAutoEvent {
  COACH_AUTO_EVENT_FINISH_FIRST_LO = 0;
  COACH_AUTO_EVENT_FINISH_FIRST_TOPIC = 1;
}

enum PaymentGateway {
  GATEWAY_NONE = 0;
  GATEWAY_ASIAPAY = 1;
  GATEWAY_ONEPAY = 2;
  GATEWAY_MOMO = 3;
  GATEWAY_ZALO = 4;
  GATEWAY_GRAB = 5;
  GATEWAY_GHN = 6;
}

enum CodOrderTransitionAction {
  COD_ORDER_TRANSITION_NONE = 0;
  COD_ORDER_TRANSITION_COMPLETE = 1;
  COD_ORDER_TRANSITION_CANCEL = 2;
}

enum CodOrderStatus {
  COD_ORDER_STATUS_NONE = 0;
  COD_ORDER_STATUS_PENDING = 1;
  COD_ORDER_STATUS_CANCELED = 2;
  COD_ORDER_STATUS_SUCCESSFULLY = 3;
}

enum SubscriptionStatus {
  SUBSCRIPTION_STATUS_NONE = 0;
  SUBSCRIPTION_STATUS_ACTIVE = 1;
  SUBSCRIPTION_STATUS_DISABLED = 2;
}

enum PlanPrivilege {
  CAN_ACCESS_LEARNING_TOPICS = 0;
  CAN_ACCESS_PRACTICE_TOPICS = 1;
  CAN_ACCESS_MOCK_EXAMS = 2;
  CAN_ACCESS_ALL_LOS = 3;
  CAN_ACCESS_SOME_LOS = 4;
  CAN_WATCH_VIDEOS = 5;
  CAN_READ_STUDY_GUIDES = 6;
  CAN_SKIP_VIDEOS = 7;
  CAN_CHAT_WITH_TEACHER = 8;
}
enum PaymentMethod {
  PAYMENT_METHOD_NONE = 0;
  PAYMENT_METHOD_ATM = 1;               // ONEPAY
  PAYMENT_METHOD_CREDIT_DEBIT_CARD = 2; // CC
  PAYMENT_METHOD_COD = 3;               // COD
  PAYMENT_METHOD_BANK_TRANSFER = 4;
}
enum UserGroup {
  USER_GROUP_NONE = 0;
  USER_GROUP_STUDENT = 1;
  USER_GROUP_COACH = 2;
  USER_GROUP_TUTOR = 3;
  USER_GROUP_STAFF = 4;
  USER_GROUP_ADMIN = 5;
  USER_GROUP_TEACHER = 6;
  USER_GROUP_PARENT = 7;
  USER_GROUP_CONTENT_ADMIN = 8;
  USER_GROUP_CONTENT_STAFF = 9;
  USER_GROUP_SALES_ADMIN = 10;
  USER_GROUP_SALES_STAFF = 11;
  USER_GROUP_CS_ADMIN = 12;
  USER_GROUP_CS_STAFF = 13;
  USER_GROUP_SCHOOL_ADMIN = 14;
  USER_GROUP_SCHOOL_STAFF = 15;
}

enum SortOrderType {
  SORT_ORDER_TYPE_DESC = 0;
  SORT_ORDER_TYPE_ASC = 1;
}
